# mozare-deep-research

./: .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/: settings.json
.claude/agents/: citation-auditor.md  contradiction-reviewer.md  final-adversary.md  research-scout.md  research-verifier.md  source-screener.md
.github/workflows/: ci.yml
.mros/: project.yaml
.mros/compiled/: kernel.md
audits/: initial-installation.md  mros-v1.2-migration.md
claims/: claims.yaml
config/: methodology.yaml
docs/: apply-v1.1-with-claude.md  apply-v1.2-with-claude.md  architecture.md  benchmark-protocol.md  integrations.md  limitations.md  live-certification.md  methodology-adaptation.md  migration-v1.0-to-v1.1.md  migration-v1.1-to-v1.2.md  model-routing.md  revision-analysis-v1.1.md  revision-analysis-v1.2.md  root-cause-analysis-v1.md  setup.md  simulation-uncreative-writing.md  system-decisions.md  testing.md  threat-model.md  upstream-audit.md  walkthrough.md
events/: events.jsonl
releases/: mros-v1.0.0.md  mros-v1.1.0.md  mros-v1.2.0.md
research/: contract.yaml  handoff.yaml  state.yaml
scripts/: export_schemas.py  package_repo.py  sync_templates.py  verify_repo.py
src/mros/: __init__.py  (+14 more)
tests/: conftest.py  test_adapters.py  test_audit.py  test_coverage.py  test_events.py  test_hooks_and_verify.py  test_identifiers.py  test_io_and_locking.py  test_method.py  test_models.py  test_project_and_cli.py  test_quotes.py  test_repository_contract.py  test_runs.py
(+69 files in other folders)
